<resources>
    <string name="app_name">Ranch the sheeps!</string>
    <string name="dummy_player_name">Player</string>
    <string name="btn_create_room">Start New Game</string>
    <string name="btn_better_of_one">Oneshot</string>
    <string name="btn_better_of_three">3 Rounds</string>
    <string name="game_logo">Game\'s Logo</string>
    <string name="player_name">Player\'s Name</string>
    <string name="btn_find_game">Find Game</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discover_players_message">To discover new players this permission is required. Would like to give it?</string>
    <string name="finding_players">Finding nearby players…</string>
    <string name="waiting_for_player">Game \"%1$s\" created!\nWaiting for an opponent…</string>
    <string name="error_game_creation">Oh oh! An error occurred when creating a game, please retry again.</string>
    <string name="generic_error">Whoops! There is something wrong here: %1$s</string>
    <string name="available_games">Available Games</string>
    <string name="channel_disconnected">Oh oh! The direct channel disconnected!</string>
    <string name="p2p_unsupported">WiFi P2P is unsupported</string>
    <string name="p2p_error">try to restart the application please.</string>
    <string name="p2p_busy">Is WiFi disabled?</string>
    <string name="starting_game">Starting</string>
    <string name="starting_game_message">Starting the game, please be patient…</string>
    <string name="attempt_to_connect">Connect to a Game</string>
    <string name="be_patient">Connecting to \"%1$s\". Tell to the other player to accept the incoming request. Please be patient…</string>
    <string name="loading">Loading…</string>
    <string name="you_won">You won! 🏆</string>
    <string name="you_lose">You lose! ❌</string>
    <string name="music_enabled">🔈</string>
    <string name="music_disabled">🔇</string>
    <string name="sounds_enabled">🔔</string>
    <string name="sounds_disabled">🔕</string>
    <string name="catch_white_sheep">Catch the white sheep!</string>
    <string name="catch_dark_sheep">Catch the dark sheep!</string>
    <string name="game_over">Game Over!</string>
    <string name="play_again">Would you like to play again?</string>
    <string name="waiting_for_host">Waiting for the host\'s decision…</string>
    <string name="description">Created by Gabriele Pappalardo (a.a. 2020/2021)</string>
    <string name="disconnected">Oh oh. The other player is missing 😔</string>
    <string name="try_reconnecting">Trying to reconnecting in %.0f seconds…</string>
    <string name="try_connection">Trying to connect… (%d)</string>
    <string name="select_orientation">Game Orientation</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="wifi_p2p_disabled">WiFi Disabled</string>
    <string name="wifi_p2p_required">The application cannot work without the WiFi! Returning to the main screen…</string>
    <string name="already_connect">It\'s seems that you are already connect to another peer, press the button below to start the game</string>
    <string name="start_game">Connect</string>
    <string name="not_connected_anymore">The connection to the peer has been lost.</string>
    <string name="permissions_required">Sorry, but the app without the permission won\'t work.</string>
    <string name="help">Help</string>
    <string name="cannot_find_game_question">Are you having trouble finding a game?</string>
</resources>